# shallow-tree

./: .gitignore  README.md  env.yml  environment.wsl.yml  input.py  pyproject.toml  synth_score_NOTEBOOK.ipynb
application_config/: config_remote.json  example.config.json
docs/: api.md  memory_reduction.md  redis_cache_keys.md
plans/: performance_optimization.md
scripts/: check_image.py  redis_apptainer.sh
shallowtree/: routes.csv  smiles40.txt
shallowtree/chem/: __init__.py  mol.py  reaction.py  tree_molecule.py  unique_molecule.py
shallowtree/configs/: application_configuration.py  cache_configuration.py  expansion_configuration.py  filter_configuration.py  input_configuration.py  search_configuration.py  stock_configuration.py
shallowtree/context/: collection.py  config.py
shallowtree/data/: logging.yml
shallowtree/interfaces/: __init__.py  api.py  execution_modes.py  full_tree_search.py  parallel.py  searchcli.py  test.py
shallowtree/parallel/: README.md  config_batch.txt  config_remote.yml  config_tf_server.txt  smiles.txt
shallowtree/rules/: direct.csv
shallowtree/tools/: build_stock.py  cat_output.py  make_stock.py  profile_search.py
shallowtree/utils/: bonds.py  exceptions.py  files.py  image.py  logging.py  lru.py  math.py  models.py  sc_score.py  type_utils.py
tests/: __init__.py  search_helpers.py  test_batch_feasibility.py  test_best_route.py  test_cache_correctness.py  test_cache_solved_consistency.py  test_config.py  test_execution_modes.py  test_expansion_strategies.py  test_image.py  test_iterative_deepening.py  test_lru.py  test_mol.py  test_parallel_iterative_deepening.py  test_parallel_run.py  test_reaction.py  test_redis_cache.py  test_req_search_tree.py  test_run.py  test_scaffold_search.py  test_search.py  test_shared_inchi_key_set.py  test_standard_search.py  test_stock_query.py
tests/examples/: application.config.json  input.json
tests/fixtures/: route_fixtures.json  (+1 more)
(+46 files in other folders)
