[tool.poetry]
name = "shallowtree"
version = "0.1"
description = "Retrosynthetic analysis and scoring"
authors = ["Kostas Papadopoulos <kostasp97@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Arhs99/shallow-tree.git"

[tool.pytest.ini_options]
mccabe-complexity = 9

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
max-args = 8
max-attributes = 20
min-public-methods = 0
disable = "C0116, E0401, E1101, I1101, R0801, R0902, R0903, R0914, R1732, R1735, W0221, W0237, W0406, W0602, W0603, W0707, W1201, W1203, W1514, W3101"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipywidgets = "^7.5.1"
jinja2 = "^3.0.0"
jupyter = "^1.0.0"
jupytext = "^1.3.3"
notebook = "^6.5.3"
deprecated = "^1.2.10"
pandas = "^1.0.0"
pillow = "^9.0.0"
rdchiral = "^1.0.0"
rdkit = "^2022.3.3"
tables = "^3.6.1"
tqdm = "^4.42.1"
onnxruntime = "<1.17.0"
tensorflow = {version = "2.8.0", optional=true}
tensorflow-serving-api = {version = "2.8.0", optional=true}
scipy = {version = "^1.0", optional=true}
matplotlib = "^3.0.0"
timeout-decorator = {version = "^0.5.0", optional=true}
paretoset = "^1.2.3"
seaborn = "^0.13.2"
numpy = "<2.0.0"
protobuf = ">=3.9.2,<4.0"
redis = {version = "^5.0.0", optional = true}
fakeredis = {version = "^2.20.0", optional = true}

[tool.poetry.extras]
all = ["scipy", "timeout-decorator", "molbloom"]
tf = ["tensorflow", "tensorflow-serving-api"]
cache = ["redis"]
dev = ["fakeredis"]

[tool.poetry.scripts]
searchcli = "shallowtree.interfaces.searchcli:main"
download_public_data = "shallowtree.tools.download_public_data:main"
smiles2stock = "shallowtree.tools.make_stock:main"

[tool.coverage.run]
relative_files = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
